--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.edmodo:rangebar:1.0.0'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.15'
 }
 repositories {
     mavenCentral()
